# cli_notes

./: README.md  pyproject.toml
cli/models/: address_book.py
cli/services/: file_service.py  input_helper.py
cli/utils/: helpers.py
