[tool.poetry]
name = "cli-notes"
version = "0.1.0"
description = ""
authors = ["dima cheban <dimacheban23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
altgraph = "^0.17.4"
cx-freeze = "^8.0.0"
prompt-toolkit = "^3.0.50"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
